fixing endpoint get my wallets
